deployment/terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "default" {
  name        = "pns-security-group"
  description = "Access control to all resources for poc-nestjs-serverless"

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
